--- a/MDK-ARM/stm32g431rbt6_mc_ABZ/stm32g431rbt6_mc_ABZ.build_log.htm
+++ b/MDK-ARM/stm32g431rbt6_mc_ABZ/stm32g431rbt6_mc_ABZ.build_log.htm
@@ -27,9 +27,15 @@ Project File Date:  07/15/2024
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'stm32g431rbt6_mc_ABZ'
+compiling mcHFI.c...
+compiling mcMath.c...
+compiling mcVar.c...
 compiling mcTask.c...
+compiling stm32g4xx_it.c...
+compiling mcConfig.c...
+compiling main.c...
 linking...
-Program Size: Code=17862 RO-data=1706 RW-data=168 ZI-data=3648  
+Program Size: Code=17706 RO-data=1670 RW-data=168 ZI-data=2448  
 FromELF: creating hex file...
 "stm32g431rbt6_mc_ABZ\stm32g431rbt6_mc_ABZ.axf" - 0 Error(s), 0 Warning(s).
 
@@ -55,7 +61,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.5.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
